[package]
name = "rs_ws281x"
version = "0.5.1"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]
license = "MIT"
description = "Wrapper for ws281x library using bindgen to track upstream"
repository = "https://github.com/rpi-ws281x/rpi-ws281x-rust"
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
cc = "1.0"
